--- a/xmacro/Makefile
+++ b/xmacro/Makefile
@@ -3,4 +3,4 @@ fsm_xmacro: fsm_xmacro.o
 fsm_xmacro.o: fsm_xmacro.c
 	gcc -std=gnu11 -Wall -g -I../src -c fsm_xmacro.c -o fsm_xmacro.o
 clean:
-	rm fsm_xmacro.o
+	rm fsm_xmacro.o fsm_xmacro
