unit tests for FIFO

--- a/unit_tests/Makefile
+++ b/unit_tests/Makefile
@@ -1,9 +1,9 @@
 tests: tests.o fsm.o unity.o
 	gcc -std=gnu11 tests.o fsm.o unity.o -o tests
 tests.o: tests.c
-	gcc -std=gnu11 -Wall -g -I../src -I../unity -c tests.c -o tests.o
+	gcc -std=gnu11 -Wall -g -I../src -I../unity -DUNIT_TESTS -c tests.c -o tests.o
 fsm.o: ../src/fsm.c
-	gcc -std=gnu11 -Wall -Wpedantic -Wpointer-arith -g -c ../src/fsm.c -o fsm.o
+	gcc -std=gnu11 -Wall -Wpedantic -Wpointer-arith -g -c -DUNIT_TESTS ../src/fsm.c -o fsm.o
 unity.o: ../unity/unity.c
 	gcc -std=gnu11 -c -I/unity ../unity/unity.c -o unity.o
 clean:
