--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,8 +1,8 @@
-fsm_example: fsm_example.o fsm.o
-	gcc -std=gnu11 fsm_example.o fsm.o -o fsm_example
-fsm_example.o: fsm_example.c
-	gcc -std=gnu11 -Wall -g -I../src -c fsm_example.c -o fsm_example.o
-fsm.o: ../src/fsm.c
-	gcc -std=gnu11 -Wall -Wpedantic -Wpointer-arith -g -c ../src/fsm.c -o fsm.o
+state_example: state_example.o state.o
+	gcc -std=gnu11 state_example.o state.o -o state_example
+state_example.o: state_example.c
+	gcc -std=gnu11 -Wall -g -I../src -c state_example.c -o state_example.o
+state.o: ../src/state.c
+	gcc -std=gnu11 -Wall -Wpedantic -Wpointer-arith -g -c ../src/state.c -o state.o
 clean:
-	rm fsm.o fsm_example.o fsm_example
+	rm state.o state_example.o state_example
